# Othello-rs

./: .gitignore  Cargo.toml  README.md  build.fish  build.rs  build_gpu.fish
clients/: client.py
example/: client.py
src/: board_consts.rs  classic_search.rs  classic_weights.rs  endgame.rs  heuristic.rs  main.rs  neural_heuristic.rs  neural_search.rs  opening_book.rs  othello_board.rs  othello_hash.rs  othello_state.rs  othello_symmetry.rs  rl.rs  server.rs
training/: othello_dataset.py  othello_symmetry.py  trace_network.py  trace_network_pred.py  train_network.py
